bk_ida/gccida/c3/loop_optimize
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/loop_optimize/src/loop.c:915:4: error: expected ';' after expression
rtx v10; // rdx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/loop_optimize/src/loop.c:915:5: error: use of undeclared identifier 'v10'
rtx v10; // rdx 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/loop_optimize/src/loop.c:917:4: error: expected ';' after expression
rtx v12; // rbx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/loop_optimize/src/loop.c:917:5: error: use of undeclared identifier 'v12'
rtx v12; // rbx 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/loop_optimize/src/loop.c:922:4: error: expected ';' after expression
rtx reg_note; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/loop_optimize/src/loop.c:922:5: error: must use 'enum' tag to refer to type 'reg_note'
rtx reg_note; // rax 
    ^
    enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/loop_optimize/src/loop.c:924:4: error: expected ';' after expression
rtx x_forced_labels; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/loop_optimize/src/loop.c:924:5: error: use of undeclared identifier 'x_forced_labels'
rtx x_forced_labels; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/loop_optimize/src/loop.c:927:4: error: expected ';' after expression
rtx v22; // rbx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/loop_optimize/src/loop.c:927:5: error: use of undeclared identifier 'v22'; did you mean 'v20'?
rtx v22; // rbx 
    ^~~
    v20
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/loop_optimize/src/loop.c:925:16: note: 'v20' declared here
 struct loop **v20; // rcx 
               ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/loop_optimize/src/loop.c:932:4: error: expected ';' after expression
rtx v28; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/loop_optimize/src/loop.c:932:5: error: use of undeclared identifier 'v28'
rtx v28; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/loop_optimize/src/loop.c:935:4: error: expected ';' after expression
rtx v31; // r15 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/loop_optimize/src/loop.c:935:5: error: use of undeclared identifier 'v31'
rtx v31; // r15 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/loop_optimize/src/loop.c:943:4: error: expected ';' after expression
rtx last_insn; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/loop_optimize/src/loop.c:943:5: error: use of undeclared identifier 'last_insn'
rtx last_insn; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/loop_optimize/src/loop.c:945:4: error: expected ';' after expression
rtx k; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/loop_optimize/src/loop.c:945:5: error: use of undeclared identifier 'k'
rtx k; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/loop_optimize/src/loop.c:946:4: error: expected ';' after expression
rtx v42; // rbp 
   ^
   ;
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/loop_optimize/src/obj/loop.o] Error 1
